<resources>
    <string name="author">Author info</string>
    <string name="app_name" translatable="false">Seminario2</string>
    <string name="get">Get Quotations</string>
    <string name="favourite">Favourite quotations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="quotation" translatable="false">Quotation Shake</string>
    <string name="random">Random quotations</string>
    <string name="qs">Quotation Shake by \n\n Guillermo \n\n guimonto@inf.upv.es\n\n2018</string>
    <string name="name_u">Name that identifies the user</string>
    <string name="insert">Insert your name</string>
    <string name="quo_reci">Quotations will be received in the select language</string>
    <string name="web">Web requests will be performed using the selected HTTP method</string>
    <string name="get_get">GET</string>
    <string name="post">POST</string>
    <string name="hello">Hello %1s! \nPress Refresh to get a new quotation"</string>
    <string name="sample">This is a sample quotation</string>
    <string name="sample_author">This is a sample author</string>
    <string name="nameless">Nameless One</string>
    <string name="confirmation_delete">Are you sure you want to delete this quotation?</string>
    <string name="action_add">Add</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Clear All</string>
    <string name="confirmation_delete_all">Are you sure you want to delete ALL your favourite quotations?</string>

</resources>
